--- a/en/index.html
+++ b/en/index.html
@@ -1013,9 +1013,8 @@
     class="home page-template page-template-page-templates page-template-home page-template-page-templateshome-php page page-id-7950 en desktop"
   >
   <video autoplay loop id="bgvid">
-    <source src=".mov" type="video/mov">
-    <source src="assets/bg.mp4" type="video/mp4">
-    </video>
+    <source src="assets/bg.mp4" type="video/mp4" />
+  </video>
     <div class="off-canvas-wrapper" style="">
       <div class="off-canvas-content" data-off-canvas-content>
         <header
