--- a/en/index.html
+++ b/en/index.html
@@ -1012,9 +1012,8 @@
   <body
     class="home page-template page-template-page-templates page-template-home page-template-page-templateshome-php page page-id-7950 en desktop"
   >
-  <video autoplay loop id="bgvid">
-    <source src="assets/bg.mp4" type="video/mp4" />
-  </video>
+    <video loop playsinline autoplay data-src="assets/bg.mp4" data-video-small="assets/bg.mp4" data-video-medium="assets/bg.mp4" data-video-large="assets/bg.mp4" src="assets/bg.mp4" id="bgvid">
+    </video>
     <div class="off-canvas-wrapper" style="">
       <div class="off-canvas-content" data-off-canvas-content>
         <header
