splash & start here beta

--- a/en/process.html
+++ b/en/process.html
@@ -1380,174 +1380,55 @@
             <!-- /social -->
           </div>
         </div>
-        <footer
-          class="footer"
-          id="contact"
-          role="contentinfo"
-          style="background-color: rgb(24, 24, 24)"
-        >
-          <div id="inner-footer" class="row align-justify">
-            <div class="small-12 medium-3 large-3 columns footer-block">
-              <ul id="menu-footer-en0" class="vertical menu footer-nav">
-                <li
-                  id="menu-item-3432"
-                  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3432"
-                >
-                  <a href="#home" class="inner-link">Home</a>
-                </li>
-                <li
-                  id="menu-item-3419"
-                  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3419"
-                >
-                  <a href="#projects" class="inner-link">Projects</a>
-                </li>
-                <li
-                  id="menu-item-8244"
-                  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-8244"
-                >
-                  <a href="#services" class="inner-link">Services</a>
-                </li>
-                <li
-                  id="menu-item-8728"
-                  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-8728"
-                >
-                  <a href="#about" class="inner-link">About</a>
-                </li>
-                <li
-                  id="menu-item-8245"
-                  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-8245"
-                >
-                  <a href="#contact" class="inner-link">Contact</a>
-                </li>
-              </ul>
+        <footer class="footer" id="contact" role="contentinfo" style="background-color: rgb(0, 0, 0);">
+          <div class="max-footer">
+            <div class="footer-top">
+              <h1>META CAPTAIN</h1>
             </div>
-            <div class="small-12 medium-6 large-6 columns footer-block">
-              <p class="subheader" style="text-align: center">
-                Launch your next project…
-              </p>
-              <p style="text-align: center">
-                <a class="button large local" href="">Get Started Today</a>
-              </p>
-              <div class="columns">
-                <p class="no-margin-bottom" style="text-align: center">
-                  Let’s talk
-                </p>
-                <p style="text-align: center">
-                  <a
-                    class="button clear white external phone no-external-link"
-                    href="tel:+34935193765"
-                    >+number</a
-                  >
-                </p>
+            <div class="footer-center">
+              <div class="footer-center--container-left">
+                <h2>launch your next project</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore inventore, quae suscipit facilis reiciendis vitae maxime adipisci eius minima ullam numquam eligendi eveniet provident, assumenda consequatur sed ut dolorum minus?</p>
               </div>
-            </div>
-            <div class="small-12 medium-3 large-3 columns footer-block">
-              <p class="subtitle">Stay in touch</p>
-              <div class="social-links-footer">
-                <a
-                  href=""
-                  target="_blank"
-                  rel="nofollow noopener noreferrer"
-                  class="Twitter local"
-                  >Twitter<svg class="icon white tiny" viewBox="0 0 30 30">
-                    <use xlink:href="#external"></use></svg
-                  ><span class="show-for-sr">Abre en nueva ventana</span></a
-                >
-                <a
-                  href=""
-                  target="_blank"
-                  rel="nofollow noopener noreferrer"
-                  class="linkedin local"
-                  >Linkedin<svg class="icon white tiny" viewBox="0 0 30 30">
-                    <use xlink:href="#external"></use></svg
-                  ><span class="show-for-sr">Abre en nueva ventana</span></a
-                >
-                <a
-                  href=""
-                  target="_blank"
-                  rel="nofollow noopener noreferrer"
-                  class="Facebook local"
-                  >Facebook<svg class="icon white tiny" viewBox="0 0 30 30">
-                    <use xlink:href="#external"></use></svg
-                  ><span class="show-for-sr">Abre en nueva ventana</span></a
-                >
-
-                <button
-                  class="button tiny hollow white"
-                  data-open="newsletter_popup"
-                  aria-controls="newsletter_popup"
-                  aria-haspopup="true"
-                  tabindex="0"
-                >
-                  Newsletter
-                </button>
-              </div>
-              <div class="lb-container" itemscope="" itemtype="">
-                <p class="subtitle">Say Hello</p>
-                <span itemprop="telephone">+number</span><br />
-                <span itemprop="email"
-                  ><a
-                    href="mailto:info@vueloiv.com"
-                    class="external phone no-external-link"
-                    >info@email.com</a
-                  ></span
-                >
-                <p class="subtitle">Address</p>
-                <div
-                  itemprop="address"
-                  itemscope=""
-                  itemtype="http://schema.org/PostalAddress"
-                >
-                  <span itemprop="streetAddress">lorem 1231</span><br />
-                  <span itemprop="postalCode">08010</span>
-                  <span itemprop="addressLocality">United States</span>
-                  <span itemprop="addressRegion" style="display: none"
-                    >Spain</span
-                  >
-                  <br />
-                  <a
-                    class="linklocation local"
-                    href=""
-                    target="_blank"
-                    rel="noopener"
-                  >
-                    How to find us
-                    <svg class="icon white tiny" viewBox="0 0 30 30">
-                      <use xlink:href="#external"></use></svg
-                    ><span class="show-for-sr">Abre en nueva ventana</span></a
-                  >
+              <div class="footer-center--container-right">
+                <div class="footer-center--container">
+                  <h4>Overview</h4>
+                  <a href="index.html">Home</a>
+                  <a href="about.html">About Us</a>
+                  <a href="#">Process</a>
+                  <a href="start-here.html">Start Here</a>
+                  <a href="contact.html">Contact US</a>
+                </div>
+                <div class="footer-center--container">
+                  <h4>Social Media</h4>
+                  <a href="">
+                    <img src="assets/icons/fb.svg" alt="">
+                  </a>
+                  <a href="">
+                    <img src="assets/icons/insta.svg" alt="">
+                  </a>
+                  <a href="">
+                    <img src="assets/icons/twitter.svg" alt="">
+                  </a>
+                </div>
+                <div class="footer-center--container">
+                  <h4>Contact Address</h4>
+                  <p>Lorem ipsum dolor sit amet.</p>
+                  <p>info@email.com</p>
+                </div>
+                <div class="footer-center--container">
+                  <h4>Legal</h4>
+                  <a href="">Terms & Conditions</a>
+                  <a href="">Privacy & Policy</a>
                 </div>
               </div>
-            </div>
-            <div class="columns small-12 center-content">
-              <p class="source-org copyright">
-                © 2022 Meta Captian All rights reserved.
-              </p>
-            </div>
-            <div class="columns small-12 center-content">
-              <div class="menu-footer-legal">
-                <ul
-                  id="menu-legal-en"
-                  class="vertical medium-horizontal menu simple"
-                >
-                  <li
-                    id="menu-item-6818"
-                    class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6818"
-                  >
-                    <a href="" class="local">Cookies Policy</a>
-                  </li>
-                  <li
-                    id="menu-item-6820"
-                    class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6820"
-                  >
-                    <a href="" class="local">Privacy Policy</a>
-                  </li>
-                </ul>
               </div>
+            <div class="footer-bottom">
+              <p>© 2022 Meta Captian All rights reserved.</p>
             </div>
           </div>
-          <!-- end #inner-footer -->
-        </footer>
+        <!-- end #inner-footer -->
+      </footer>
         <!-- end .footer -->
       </div>
       <!-- end .main-content -->
