--- a/en/index.html
+++ b/en/index.html
@@ -34,7 +34,7 @@
     <link rel="alternate" hreflang="x-default" href="https://www.vueloiv.com" />
 
     <link rel="stylesheet" href="assets/main.css">
-
+    <link rel="stylesheet" href="assets/sections/splash.css">
     <!-- Google Tag Manager for WordPress by gtm4wp.com -->
     <script data-cfasync="false" data-pagespeed-no-defer>
       var gtm4wp_datalayer_name = "dataLayer";
@@ -1014,8 +1014,35 @@
   </head>
 
   <body
-    class="home page-template page-template-page-templates page-template-home page-template-page-templateshome-php page page-id-7950 en desktop"
-  >
+    class="home page-template page-template-page-templates page-template-home page-template-page-templateshome-php page page-id-7950 en desktop ov-hidden">
+    <div class="splash-screen">
+      <div class="fire-wrapper">
+        <img class="fire" src="https://www.stivaliserna.com/assets/rocket/fire.svg" />
+      </div>
+      
+      <div class="rain rain1"></div>
+      <div class="rain rain2">
+        <div class="drop drop2"></div>
+      </div>
+      <div class="rain rain3"></div>
+      <div class="rain rain4"></div>
+      <div class="rain rain5">
+        <div class="drop drop5"></div>
+      </div>
+      <div class="rain rain6"></div>
+      <div class="rain rain7"></div>
+      <div class="rain rain8">
+        <div class="drop drop8"></div>
+      </div>
+      <div class="rain rain9"></div>
+      <div class="rain rain10"></div>
+      <div class="drop drop11"></div>
+      <div class="drop drop12"></div>
+      <div id="canvas"></div>
+      <script src="https://unpkg.com/three@0.123.0/build/three.min.js"></script>
+      <script src="https://unpkg.com/three@0.123.0/examples/js/loaders/GLTFLoader.js"></script>
+    </div>
+
     <canvas id="background"></canvas>
     <div class="off-canvas-wrapper" style="">
       <div class="off-canvas-content" data-off-canvas-content>
@@ -1056,7 +1083,7 @@
             <div class="hero-section-container" id="home">
               <header class="row align-middle hero-section center-content" style="transform: translateY(-150px);">
                 <div class="columns hero-section-text hide-on-init" style="text-align: center;">
-                  <model-viewer class="model-hero" src="assets/models/jabali_malecon2.glb" seamless-poster environment-image="neutral" shadow-intensity="1" autoplay ar ar-modes="webxr scene-viewer quick-look" camera-controls auto-rotate interaction-prompt-threshold="1500" camera-controls enable-pan></model-viewer>
+                  <model-viewer class="model-hero" src="assets/models/jabali_malecon2.glb" autoplay camera-controls auto-rotate interaction-prompt-threshold="1500" camera-controls></model-viewer>
                   <h2 class="HeroSplitText">
                     <span class="stroke">UNREAL ASSETS</span>
                   </h2>
@@ -1301,6 +1328,7 @@
                 <section
                   id="homeletstalk"
                   class="row expanded align-middle home-section letstalk"
+                  style="margin-bottom: 200px !important;"
                 >
                   <div class="section-megatitle_x2_cta">
                     <div class="megatitle title1">Let's</div>
@@ -1333,7 +1361,8 @@
                   </div>
                 </section>
 
-                <section
+                <!--
+                                  <section
                   id="whychooseus"
                   class="home-section whychooseus row container"
                 >
@@ -1404,6 +1433,7 @@
                     </article>
                   </div>
                 </section>
+                -->
               </div>
             </main>
             <!-- end #main -->
@@ -1635,167 +1665,53 @@
             <!-- /social -->
           </div>
         </div>
-        <footer class="footer" id="contact" role="contentinfo" style="background-color: rgb(24, 24, 24);">
-          <div id="inner-footer" class="row align-justify">
-            <div class="small-12 medium-3 large-3 columns footer-block">
-              <ul id="menu-footer-en0" class="vertical menu footer-nav">
-                <li
-                  id="menu-item-3432"
-                  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3432"
-                >
-                  <a href="#home">Home</a>
-                </li>
-                <li
-                  id="menu-item-3419"
-                  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3419"
-                >
-                  <a href="#projects"
-                    >Projects</a
-                  >
-                </li>
-                <li
-                  id="menu-item-8244"
-                  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-8244"
-                >
-                  <a href="#services"
-                    >Services</a
-                  >
-                </li>
-                <li
-                  id="menu-item-8728"
-                  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-8728"
-                >
-                  <a href="#about"
-                    >About</a
-                  >
-                </li>
-                <li
-                  id="menu-item-8245"
-                  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-8245"
-                >
-                  <a href="#contact"
-                    >Contact</a
-                  >
-                </li>
-              </ul>
-            </div>
-            <div class="small-12 medium-6 large-6 columns footer-block">
-              <p class="subheader" style="text-align: center">
-                Launch your next project&#8230;
-              </p>
-              <p style="text-align: center">
-                <a class="button large" href=""
-                  >Get Started Today</a
-                >
-              </p>
-              <div class="columns">
-                <p class="no-margin-bottom" style="text-align: center">
-                  Let&#8217;s talk
-                </p>
-                <p style="text-align: center">
-                  <a class="button clear white" href="tel:+34935193765"
-                    >+number</a
-                  >
-                </p>
+        <footer class="footer" id="contact" role="contentinfo" style="background-color: rgb(0, 0, 0);">
+            <div class="max-footer">
+              <div class="footer-top">
+                <h1>META CAPTAIN</h1>
               </div>
-            </div>
-            <div class="small-12 medium-3 large-3 columns footer-block">
-              <p class="subtitle">Stay in touch</p>
-              <div class="social-links-footer">
-                <a
-                  href=""
-                  target="_blank"
-                  rel="nofollow noopener noreferrer"
-                  class="Twitter"
-                  >Twitter</a
-                >
-                <a
-                  href=""
-                  target="_blank"
-                  rel="nofollow noopener noreferrer"
-                  class="linkedin"
-                  >Linkedin</a
-                >
-                <a
-                  href=""
-                  target="_blank"
-                  rel="nofollow noopener noreferrer"
-                  class="Facebook"
-                  >Facebook</a
-                >
-
-                <button
-                  class="button tiny hollow white"
-                  data-open="newsletter_popup"
-                >
-                  Newsletter
-                </button>
-              </div>
-              <div
-                class="lb-container"
-                itemscope=""
-                itemtype=""
-              >
-                <p class="subtitle">Say Hello</p>
-                <span itemprop="telephone">+number</span><br />
-                <span itemprop="email"
-                  ><a href="mailto:info@vueloiv.com">info@email.com</a></span
-                >
-                <p class="subtitle">Address</p>
-                <div
-                  itemprop="address"
-                  itemscope=""
-                  itemtype="http://schema.org/PostalAddress"
-                >
-                  <span itemprop="streetAddress">lorem 1231</span><br />
-                  <span itemprop="postalCode">08010</span>
-                  <span itemprop="addressLocality">United States</span>
-                  <span itemprop="addressRegion" style="display: none"
-                    >Spain</span
-                  >
-                  <br />
-                  <a
-                    class="linklocation"
-                    href=""
-                    target="_blank"
-                    rel="noopener"
-                  >
-                    How to find us
-                  </a>
+              <div class="footer-center">
+                <div class="footer-center--container-left">
+                  <h2>launch your next project</h2>
+                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore inventore, quae suscipit facilis reiciendis vitae maxime adipisci eius minima ullam numquam eligendi eveniet provident, assumenda consequatur sed ut dolorum minus?</p>
                 </div>
+                <div class="footer-center--container-right">
+                  <div class="footer-center--container">
+                    <h4>Overview</h4>
+                    <a href="#">Home</a>
+                    <a href="about.html">About Us</a>
+                    <a href="process.html">Process</a>
+                    <a href="start-here.html">Start Here</a>
+                    <a href="contact.html">Contact US</a>
+                  </div>
+                  <div class="footer-center--container">
+                    <h4>Social Media</h4>
+                    <a href="">
+                      <img src="assets/icons/fb.svg" alt="">
+                    </a>
+                    <a href="">
+                      <img src="assets/icons/insta.svg" alt="">
+                    </a>
+                    <a href="">
+                      <img src="assets/icons/twitter.svg" alt="">
+                    </a>
+                  </div>
+                  <div class="footer-center--container">
+                    <h4>Contact Address</h4>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <p>info@email.com</p>
+                  </div>
+                  <div class="footer-center--container">
+                    <h4>Legal</h4>
+                    <a href="">Terms & Conditions</a>
+                    <a href="">Privacy & Policy</a>
+                  </div>
+                </div>
+                </div>
+              <div class="footer-bottom">
+                <p>© 2022 Meta Captian All rights reserved.</p>
               </div>
             </div>
-            <div class="columns small-12 center-content">
-              <p class="source-org copyright">
-                © 2022 Meta Captian All rights reserved.
-              </p>
-            </div>
-            <div class="columns small-12 center-content">
-              <div class="menu-footer-legal">
-                <ul
-                  id="menu-legal-en"
-                  class="vertical medium-horizontal menu simple"
-                >
-                  <li
-                    id="menu-item-6818"
-                    class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6818"
-                  >
-                    <a href=""
-                      >Cookies Policy</a
-                    >
-                  </li>
-                  <li
-                    id="menu-item-6820"
-                    class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6820"
-                  >
-                    <a href=""
-                      >Privacy Policy</a
-                    >
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
           <!-- end #inner-footer -->
         </footer>
         <!-- end .footer -->
@@ -2358,7 +2274,7 @@
 
     <script src="assets/main.js"></script>
     <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script>
+    <script src="assets/sections/splash.js"></script>
   </body>
 </html>
 
