pagina start here terminada

--- a/en/about.html
+++ b/en/about.html
@@ -1043,7 +1043,11 @@
                     <p>
                       <span>Premium game-ready assets - Simplified</span>
                     </p>
-                    <a href="https://sketchfab.com/metacaptain" class="local btnHeroPortofolio">View Portofolio <img src="assets/icons/arrow.svg"></a>
+                    <a
+                    class="button large btnHeroPortofolio"
+                    href="https://sketchfab.com/metacaptain"
+                    >View Portofolio <img src="assets/icons/arrow.svg"></a
+                    >
                   </div>
                 </div>
               </header>
