add home models

--- a/en/contact.html
+++ b/en/contact.html
@@ -125,6 +125,7 @@
           rgb(251, 105, 98) 80%,
           rgb(254, 248, 76) 100%
         );
+      
         --wp--preset--gradient--blush-light-purple: linear-gradient(
           135deg,
           rgb(255, 206, 236) 0%,
@@ -558,7 +559,7 @@
                 >
                 <model-viewer class="model-hero" src="assets/models/jabali_malecon2.glb" seamless-poster environment-image="neutral" shadow-intensity="1" autoplay ar ar-modes="webxr scene-viewer quick-look" camera-controls auto-rotate interaction-prompt-threshold="1500" camera-controls enable-pan></model-viewer>
                   <h2 class="HeroSplitText">
-                    <span class="stroke">UNREAL ASSETS</span>
+                    <span class="stroke">CONTACT US</span>
                   </h2>
                   <div class="HerosubHeaderSplitText">
                     <p>
@@ -680,6 +681,7 @@
             <div class="columns"></div>
             <div class="columns">
               <div
+              
                 class="cta_button_bottom right hide-on-init"
                 style="
                   opacity: 1;
