--- a/en/process.html
+++ b/en/process.html
@@ -585,7 +585,7 @@
               >
               <model-viewer class="model-hero" src="assets/models/jabali_malecon2.glb" seamless-poster environment-image="neutral" shadow-intensity="1" autoplay ar ar-modes="webxr scene-viewer quick-look" camera-controls auto-rotate interaction-prompt-threshold="1500" camera-controls enable-pan></model-viewer>
                 <h2 class="HeroSplitText">
-                  <span class="stroke">UNREAL ASSETS</span>
+                  <span class="stroke">Process Creation</span>
                 </h2>
                 <div class="HerosubHeaderSplitText">
                   <p>
