--- a/en/start-here.html
+++ b/en/start-here.html
@@ -600,7 +600,7 @@
                     enable-pan
                   ></model-viewer>
                   <h2 class="HeroSplitText">
-                    <span class="stroke">UNREAL ASSETS</span>
+                    <span class="stroke">START HERE</span>
                   </h2>
                   <div class="HerosubHeaderSplitText">
                     <p>
