--- a/en/about.html
+++ b/en/about.html
@@ -555,7 +555,7 @@
                 <div class="columns hero-section-text hide-on-init" style="text-align: center;">
                   <model-viewer class="model-hero" src="assets/models/jabali_malecon2.glb" seamless-poster environment-image="neutral" shadow-intensity="1" autoplay ar ar-modes="webxr scene-viewer quick-look" camera-controls auto-rotate interaction-prompt-threshold="1500" camera-controls enable-pan></model-viewer>
                   <h2 class="HeroSplitText">
-                    <span class="stroke">UNREAL ASSETS</span>
+                    <span class="stroke">ABOUT US</span>
                   </h2>
                   <div class="HerosubHeaderSplitText">
                     <p>
