--- a/en/index.html
+++ b/en/index.html
@@ -496,15 +496,6 @@
     class="home page-template page-template-page-templates page-template-home page-template-page-templateshome-php page page-id-7950 en desktop ov-hidden"
   >
     <div class="splash-screen">
-      <script>
-        THREE.ShapeUtils.triangulateShape = (function () {
-          var pnlTriangulator = new PNLTRI.Triangulator();
-          return function triangulateShape(contour, holes) {
-            return pnlTriangulator.triangulate_polygon([contour].concat(holes));
-          };
-        })();
-      </script>
-
       <div id="three-container"></div>
     </div>
 
@@ -603,7 +594,7 @@
                           title=" Cruïlla"
                           class="cursor-msg-view"
                         >
-                          PROJECT
+                        Stealth Ninja
                         </a>
                       </h2>
                     </header>
@@ -624,11 +615,18 @@
 
                     <model-viewer
                       class="model"
-                      src="https://dl.dropbox.com/s/d8l8yj3es9q3hgg/Covid-19.glb"
-                      camera-controls
+                      src="assets/models/Stealth Ninja 01 (BLACK).glb"
+                      seamless-poster
+                      environment-image="neutral"
+                      shadow-intensity="1"
+                      autoplay
                       ar
-                      ar-modes="scene-viewer webxr quick-look"
-                      ios-src="https://dl.dropbox.com/s/d4dneta9o2c0021/Covid-19.usdz"
+                      ar-modes="webxr scene-viewer quick-look"
+                      camera-controls
+                      auto-rotate
+                      interaction-prompt-threshold="1500"
+                      camera-controls
+                      enable-pan
                     >
                     </model-viewer>
                     <div class="gradientMask"></div>
@@ -645,7 +643,7 @@
                           title=" Focus"
                           class="cursor-msg-view"
                         >
-                          project
+                          Ultraman
                         </a>
                       </h2>
                     </header>
@@ -666,7 +664,7 @@
 
                     <model-viewer
                       class="model"
-                      src="https://d1a370nemizbjq.cloudfront.net/d7179472-65a3-4dab-9238-3cd295f2438a.glb"
+                      src="assets/models/ultraman taiga.glb"
                       seamless-poster
                       environment-image="neutral"
                       shadow-intensity="1"
@@ -693,7 +691,7 @@
                           title=" Stories of Clay"
                           class="cursor-msg-view"
                         >
-                          Project
+                          Freya
                         </a>
                       </h2>
                     </header>
@@ -714,14 +712,67 @@
 
                     <model-viewer
                       class="model"
-                      src="https://cdn.glitch.com/36cb8393-65c6-408d-a538-055ada20431b/Astronaut.glb?1542147958948"
-                      ios-src="https://cdn.glitch.com/36cb8393-65c6-408d-a538-055ada20431b/Astronaut.usdz?v=1569545377878"
-                      poster="https://cdn.glitch.com/36cb8393-65c6-408d-a538-055ada20431b%2Fposter-astronaut.png?v=1599079951717"
-                      alt="A 3D model of an astronaut!"
+                      src="assets/models/freya posed.glb"
+                      seamless-poster
+                      environment-image="neutral"
                       shadow-intensity="1"
-                      camera-controls="true"
-                      auto-rotate="true"
-                      ar="true"
+                      autoplay
+                      ar
+                      ar-modes="webxr scene-viewer quick-look"
+                      camera-controls
+                      auto-rotate
+                      interaction-prompt-threshold="1500"
+                      camera-controls
+                      enable-pan
+                    ></model-viewer>
+
+                    <div class="gradientMask"></div>
+                    <!-- <div class="bg_noise"></div> -->
+                  </article>
+                  <article class="featured-work row align-middle">
+                    <header
+                      class="columns featured-work__header center-content"
+                    >
+                      <h2 class="work-item-title">
+                        <a
+                          href=""
+                          rel="bookmark"
+                          title=" Stories of Clay"
+                          class="cursor-msg-view"
+                        >
+                        Red Ninja
+                        </a>
+                      </h2>
+                    </header>
+                    <div class="work-tech-data hide-on-init">
+                      <div class="block">
+                        <p class="title">Category</p>
+                        <p class="content">Person Model</p>
+                      </div>
+                      <div class="block">
+                        <p class="title">Tools</p>
+                        <p class="content">
+                          Tool one<br />
+                          Tool two<br />
+                          Tool tree<br />
+                        </p>
+                      </div>
+                    </div>
+
+                    <model-viewer
+                      class="model"
+                      src="assets/models/Stealth Ninja 2_RedMask.glb"
+                      seamless-poster
+                      environment-image="neutral"
+                      shadow-intensity="1"
+                      autoplay
+                      ar
+                      ar-modes="webxr scene-viewer quick-look"
+                      camera-controls
+                      auto-rotate
+                      interaction-prompt-threshold="1500"
+                      camera-controls
+                      enable-pan
                     ></model-viewer>
 
                     <div class="gradientMask"></div>
@@ -1380,6 +1431,14 @@
     </script>
 
     <script src="assets/modules/three.min.js"></script>
+    <script>
+      THREE.ShapeUtils.triangulateShape = (function () {
+        var pnlTriangulator = new PNLTRI.Triangulator();
+        return function triangulateShape(contour, holes) {
+          return pnlTriangulator.triangulate_polygon([contour].concat(holes));
+        };
+      })();
+    </script>
     <script src="assets/modules/bas.js"></script>
     <script src="assets/modules/textGeometry.js"></script>
     <script src="assets/modules/fontUtils.js"></script>
