--- a/en/index.html
+++ b/en/index.html
@@ -495,7 +495,7 @@
   <body
     class="home page-template page-template-page-templates page-template-home page-template-page-templateshome-php page page-id-7950 en desktop ov-hidden"
   >
-    <div class="splash-screen">
+    <div class="splash-screen" style="display: none;">
       <div id="three-container"></div>
     </div>
 
@@ -511,7 +511,7 @@
               <div class="links">
                 <a class="link-active" href="#">home</a>
                 <a href="about.html">about us</a>
-                <a href="process.html">process</a>
+     
                 <a href="start-here.html">start here</a>
                 <a href="contact.html">contact us</a>
               </div>
@@ -547,7 +547,7 @@
                 >
                   <model-viewer
                     class="model-hero"
-                    src="assets/models/jabali_malecon2.glb"
+                    src="assets/models/freya posed.glb"
                     autoplay
                     camera-controls
                     auto-rotate
@@ -559,7 +559,7 @@
                   </h2>
                   <div class="HerosubHeaderSplitText">
                     <p>
-                      <span>Premium game-ready assets - Simplified</span>
+                      <span>Freya is an original character we created in partnership with Eternity Complex</span>
                     </p>
                     <a
                       class="button large btnHeroPortofolio"
@@ -598,24 +598,17 @@
                         </a>
                       </h2>
                     </header>
-                    <div class="work-tech-data hide-on-init">
+                    <div class="work-tech-data hide-on-init" style="margin-top: -20px;">
                       <div class="block">
-                        <p class="title">Category</p>
-                        <p class="content">Virus</p>
-                      </div>
-                      <div class="block">
-                        <p class="title">Tools</p>
-                        <p class="content">
-                          Tool one<br />
-                          Tool two<br />
-                          Tool tree<br />
+                        <p class="title">Description:</p>
+                        <p class="content">Blue Ninja 003 is an character available for purchase as an avatar to further your brand.
                         </p>
                       </div>
                     </div>
 
                     <model-viewer
                       class="model"
-                      src="assets/models/Stealth Ninja 01 (BLACK).glb"
+                      src="assets/models/Stealth Ninja 02 (BLUE) .glb"
                       seamless-poster
                       environment-image="neutral"
                       shadow-intensity="1"
@@ -664,7 +657,7 @@
 
                     <model-viewer
                       class="model"
-                      src="assets/models/ultraman taiga.glb"
+                      src=""
                       seamless-poster
                       environment-image="neutral"
                       shadow-intensity="1"
@@ -712,7 +705,7 @@
 
                     <model-viewer
                       class="model"
-                      src="assets/models/freya posed.glb"
+                      src=""
                       seamless-poster
                       environment-image="neutral"
                       shadow-intensity="1"
@@ -740,28 +733,22 @@
                           title=" Stories of Clay"
                           class="cursor-msg-view"
                         >
-                        Red Ninja
+                        andyrew
                         </a>
                       </h2>
                     </header>
                     <div class="work-tech-data hide-on-init">
                       <div class="block">
-                        <p class="title">Category</p>
-                        <p class="content">Person Model</p>
-                      </div>
-                      <div class="block">
-                        <p class="title">Tools</p>
-                        <p class="content">
-                          Tool one<br />
-                          Tool two<br />
-                          Tool tree<br />
-                        </p>
+                        <p class="title">Description:</p>
+                        <p class="content"> Andy is part of the CyberFrogNFT universe.  Our team helped convert their 2D characters into 3D.</p>
+                        <br>
+                        <br>
                       </div>
                     </div>
 
                     <model-viewer
                       class="model"
-                      src="assets/models/Stealth Ninja 2_RedMask.glb"
+                      src="assets/models/andyrew with tommygun.glb"
                       seamless-poster
                       environment-image="neutral"
                       shadow-intensity="1"
