rediseño en todas las paginas terminado

--- a/en/index.html
+++ b/en/index.html
@@ -495,7 +495,7 @@
   <body
     class="home page-template page-template-page-templates page-template-home page-template-page-templateshome-php page page-id-7950 en desktop ov-hidden"
   >
-    <div class="splash-screen" style="display: none;">
+    <div class="splash-screen" >
       <div id="three-container"></div>
     </div>
 
